templates/pet-battle_template.yaml
---
# Source: pet-battle/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pet-battle
  labels:
    helm.sh/chart: pet-battle-1.0.6
    app.kubernetes.io/name: pet-battle
    app.kubernetes.io/component: pet-battle
    app.kubernetes.io/instance: release-name
    deploymentconfig: release-name-pet-battle
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: 8080-tcp
  selector:
    app.kubernetes.io/name: pet-battle
    app.kubernetes.io/component: pet-battle
    app.kubernetes.io/instance: release-name
    deploymentconfig: release-name-pet-battle
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
# Source: pet-battle/templates/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    helm.sh/chart: pet-battle-1.0.6
    app.kubernetes.io/name: pet-battle
    app.kubernetes.io/component: pet-battle
    app.kubernetes.io/instance: release-name
    deploymentconfig: release-name-pet-battle
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  name: release-name-pet-battle
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app.kubernetes.io/name: pet-battle
    app.kubernetes.io/component: pet-battle
    app.kubernetes.io/instance: release-name
    deploymentconfig: release-name-pet-battle
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        rollme: "mUxe9"
      labels:
        app.kubernetes.io/name: pet-battle
        app.kubernetes.io/component: pet-battle
        app.kubernetes.io/instance: release-name
        deploymentconfig: release-name-pet-battle
    spec:
      containers:
      - image: "quay.io/petbattle/pet-battle:latest"
        imagePullPolicy: Always
        name: pet-battle
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: "/opt/app-root/src/assets/configuration/"
            name: "release-name-pet-battle-config"          
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: "release-name-pet-battle-config"
        configMap:
          name: "release-name-pet-battle-environment"
          defaultMode: 420    
  test: false
  triggers:
  - type: ConfigChange
---
# Source: pet-battle/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-name-pet-battle
  labels:
    helm.sh/chart: pet-battle-1.0.6
    app.kubernetes.io/name: pet-battle
    app.kubernetes.io/component: pet-battle
    app.kubernetes.io/instance: release-name
    deploymentconfig: release-name-pet-battle
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  annotations:
    haproxy.router.openshift.io/balance: "roundrobin"
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: release-name-pet-battle
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - status: 'True'
      type: Admitted
